--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <title>Vila Flavia - Ubytovanie Čierny Balog</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Vila Flavia sa nachádza v rozľahlej obci Čierny Balog. Ponúka ubytovanie v súkromí pre maximálne 20 osôb. Súčasťou všetkých izieb je prístelka a kúpeľňa s toaletou a sprchovacím kútom. ">
-        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie, Nízke Tatry">
+        <meta name="description" content="Vila Flavia sa nachádza v rozľahlej obci Čierny Balog. Vďaka svojej polohe patrí medzi obľúbené lokality v rámci Horehronia. Vila ponúka ubytovanie v súkromí pre maximálne 20 osôb.">
+        <meta name="keywords" content="Vila Flavia, ubytovanie, Čierny Balog, ubytovanie v súkromí, horehronie, Nízke Tatry">
         <link rel="canonical" href="https://martina-pr.github.io/vilaflavia.github.io/index.html"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https: //fonts.googleapis.com/css2? family= Source+Sans+Pro:ital,wght@0,400;0,600;1,300 & display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/font-awesome.css"/>
         <script src="https://kit.fontawesome.com/f8eac3a66f.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
