--- a/okolie.html
+++ b/okolie.html
@@ -8,8 +8,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <title>Vila Flavia okolie - Ubytovanie Čierny Balog</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Vila Flavia sa nachádza v rozľahlej obci Čierny Balog. Ponúka ubytovanie v súkromí pre maximálne 20 osôb. Súčasťou všetkých izieb je prístelka a kúpeľňa s toaletou a sprchovacím kútom. ">
-        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie, Nízke Tatry, Bystrianska jaskyňa">
+        <meta name="description" content="Vila Flavia sa nachádza v rozľahlej obci Čierny Balog. Vďaka svojej polohe patrí medzi obľúbené lokality v rámci Horehronia. Vila ponúka ubytovanie v súkromí pre maximálne 20 osôb.">
+        <meta name="keywords" content="Vila Flavia, ubytovanie, Čierny Balog, ubytovanie v súkromí, horehronie, Nízke Tatry, Bystrianska jaskyňa">
         <link rel="canonical" href="https://martina-pr.github.io/vilaflavia.github.io/index.html"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -66,16 +66,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <div class="okolie-ciernohronska-zeleznicka-foto">
                 <div class="row">
                     <div class="column">
-                        <img src="img/zeleznicka-cyklodrezina/zeleznicka-1 (1).png" alt="železnička"/>
+                        <img src="img/zeleznicka-cyklodrezina/zeleznicka-1 (1).webp" alt="železnička"/>
                     </div>
                     <div class="column">
-                        <img src="img/zeleznicka-cyklodrezina/zeleznicka-3 (1).png" alt="železnička"/>
+                        <img src="img/zeleznicka-cyklodrezina/zeleznicka-3 (1).webp" alt="železnička"/>
                     </div>
                     <div class="column">
-                        <img src="img/zeleznicka-cyklodrezina/cyklodrezina-2 (1).png" alt="cyklodrezina"/>
+                        <img src="img/zeleznicka-cyklodrezina/cyklodresina-2 (1).webp" alt="cyklodrezina"/>
                     </div>
                     <div class="column" >
-                        <img src="img/zeleznicka-cyklodrezina/cyklodrezina-1 (4).png" alt="cyklodrezina"/>
+                        <img src="img/zeleznicka-cyklodrezina/cyklodresina-1 (4).webp" alt="cyklodrezina"/>
+                       
                     </div>
                 </div>
             </div>
@@ -96,16 +97,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <div class="okolie-vydrovo-foto">
                 <div class="row">
                     <div class="column">
-                        <img src="img/vydrovo-ski/lesnicky-skanzen-1.png" alt="skanzen"/>
+                        <img src="img/vydrovo-ski/lesnicky-skanzen-1.webp" alt="skanzen"/>
                     </div>
                     <div class="column">
-                        <img src="img/vydrovo-ski/skanzen-1.png" alt="skanzen"/>
+                        <img src="img/vydrovo-ski/skanzen-1.webp" alt="skanzen"/>
                     </div>
                     <div class="column">
-                        <img src="img/vydrovo-ski/ski-2.png" alt="vydrovo-ski"/>
+                        <img src="img/vydrovo-ski/ski-2.webp" alt="vydrovo-ski"/>
                     </div>
                     <div class="column" >
-                        <img src="img/vydrovo-ski/ski-1.png" alt="vydrovo-ski"/>
+                        <img src="img/vydrovo-ski/ski-1.webp" alt="vydrovo-ski"/>
                     </div>
                 </div>
             </div>
@@ -126,16 +127,16 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
             <div class="okolie-bystrianska-jaskyna-foto">
                 <div class="row">
                     <div class="column">
-                        <img src="img/bystrianska-tatry/bystrianska-jaskyna-1.png" alt="bystrianska jaskyna"/>
+                        <img src="img/bystrianska-tatry/bystrianska-jaskyna-1.webp" alt="bystrianska jaskyna"/>
                     </div>
                     <div class="column">
-                        <img src="img/bystrianska-tatry/bystrianska-jaskyna-2.png" alt="bystrianska jaskyna"/>
+                        <img src="img/bystrianska-tatry/bystrianska-jaskyna-2.webp" alt="bystrianska jaskyna"/>
                     </div>
                     <div class="column">
-                        <img src="img/bystrianska-tatry/nizke-tatry-2.png" alt="nizke tatry"/>
+                        <img src="img/bystrianska-tatry/nizke-tatry-2.webp" alt="nizke tatry"/>
                     </div>
                     <div class="column" >
-                        <img src="img/bystrianska-tatry/nizke-tatry-1.png" alt="nizke tatry"/>
+                        <img src="img/bystrianska-tatry/nizke-tatry-1.webp" alt="nizke tatry"/>
                     </div>
                 </div>
             </div>
