--- a/ubytovanie.html
+++ b/ubytovanie.html
@@ -8,8 +8,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <title>Vila Flavia - Ubytovanie Čierny Balog</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Vila Flavia sa nachádza v rozľahlej obci Čierny Balog. Ponúka ubytovanie v súkromí pre maximálne 20 osôb. Súčasťou všetkých izieb je prístelka a kúpeľňa s toaletou a sprchovacím kútom. ">
-        <meta name="keywords" content="Vila Flavia, ubytovanie, ubytovanie Čierny Balog, ubytovanie v súkromí, horehronie, Nízke Tatry">
+        <meta name="description" content="Vila Flavia sa nachádza v rozľahlej obci Čierny Balog. Vďaka svojej polohe patrí medzi obľúbené lokality v rámci Horehronia. Vila ponúka ubytovanie v súkromí pre maximálne 20 osôb.">
+        <meta name="keywords" content="Vila Flavia, ubytovanie, Čierny Balog, ubytovanie v súkromí, horehronie, Nízke Tatry">
         <link rel="canonical" href="https://martina-pr.github.io/vilaflavia.github.io/index.html"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -73,23 +73,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </div>
                 <div class="thumbnails1">
                     <div class="figure1">
-                        <img src="img/izba1/izba1-3.jpg" alt="izba č.1" style="width:100%"/>
+                        <img src="img/izba1/izba1-3.webp" alt="izba č.1" style="width:100%"/>
                     </div>
                     <div class="row ">
                         <div  class="column">
-                            <img src="img/izba1/izba1-3.jpg" alt="izba č.1" style="width:100%"/>
+                            <img src="img/izba1/izba1-3.webp" alt="izba č.1" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba1/izba1-4.jpg" alt="izba č.1" style="width:100%"/>
+                            <img src="img/izba1/izba1-4.webp" alt="izba č.1" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba1/izba1-5.jpg" alt="izba č.1"  style="width: 100%"/>
+                            <img src="img/izba1/izba1-5.webp" alt="izba č.1"  style="width: 100%"/>
                         </div>
                         <div  class="column" >
-                            <img src="img/izba1/izba1-1.jpg" alt="izba č.1" style="width:100%"/>
+                            <img src="img/izba1/izba1-1.webp" alt="izba č.1" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba1/izba1-6.jpg" alt="izba č.1" style="width:100%"/>
+                            <img src="img/izba1/izba1-6.webp" alt="izba č.1" style="width:100%"/>
                         </div>
                     </div>
                 </div>
@@ -103,23 +103,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </div>
                 <div class="thumbnails2">
                     <div class="figure2">
-                        <img src="img/izba2/izba2-3.jpg" alt="izba č.2" style="width:100%"/>
+                        <img src="img/izba2/izba2-3.webp" alt="izba č.2" style="width:100%"/>
                     </div>
                     <div class="row ">
                         <div  class="column">
-                            <img src="img/izba2/izba2-3.jpg" alt="izba č.2" style="width:100%"/>
+                            <img src="img/izba2/izba2-3.webp" alt="izba č.2" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba2/izba2.jpg" alt="izba č.2" style="width:100%"/>
+                            <img src="img/izba2/izba2.webp" alt="izba č.2" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba2/izba2-4.jpg" alt="izba č.2"  style="width: 100%"/>
+                            <img src="img/izba2/izba2-4.webp" alt="izba č.2"  style="width: 100%"/>
                         </div>
                         <div  class="column" >
-                            <img src="img/izba2/izba2-2.jpg" alt="izba č.2" style="width:100%"/>
+                            <img src="img/izba2/izba2-2.webp" alt="izba č.2" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba2/izba2-1.jpg" alt="izba č.2" style="width:100%"/>
+                            <img src="img/izba2/izba2-1.webp" alt="izba č.2" style="width:100%"/>
                         </div>
                     </div>
                 </div>
@@ -133,23 +133,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </div>
                 <div class="thumbnails3">
                     <div class="figure3">
-                        <img src="img/izba3/izba3-1.jpg" alt="izba č.3" style="width:100%"/>
+                        <img src="img/izba3/izba3-1.webp" alt="izba č.3" style="width:100%"/>
                     </div>
                     <div class="row ">
                         <div  class="column">
-                            <img src="img/izba3/izba3-1.jpg" alt="izba č.3" style="width:100%"/>
+                            <img src="img/izba3/izba3-1.webp" alt="izba č.3" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba3/izba3.jpg" alt="izba č.3" style="width:100%"/>
+                            <img src="img/izba3/izba3.webp" alt="izba č.3" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba3/izba3-5.jpg" alt="izba č.3"  style="width: 100%"/>
+                            <img src="img/izba3/izba3-5.webp" alt="izba č.3"  style="width: 100%"/>
                         </div>
                         <div  class="column" >
-                            <img src="img/izba3/izba3-3.jpg" alt="izba č.3" style="width:100%"/>
+                            <img src="img/izba3/izba3-3.webp" alt="izba č.3" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba3/izba3-2.jpg" alt="izba č.3" style="width:100%"/>
+                            <img src="img/izba3/izba3-2.webp" alt="izba č.3" style="width:100%"/>
                         </div>
                     </div>
                 </div>
@@ -163,23 +163,23 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </div>
                 <div class="thumbnails4">
                     <div class="figure4">
-                        <img src="img/izba4/izba4-1.jpg" alt="izba č.4" style="width:100%"/>
+                        <img src="img/izba4/izba4-1.webp" alt="izba č.4" style="width:100%"/>
                     </div>
                     <div class="row ">
                         <div  class="column">
-                            <img src="img/izba4/izba4-1.jpg" alt="izba č.4" style="width:100%"/>
+                            <img src="img/izba4/izba4-1.webp" alt="izba č.4" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba4/izba4-2.jpg" alt="izba č.4" style="width:100%"/>
+                            <img src="img/izba4/izba4-2.webp" alt="izba č.4" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba4/izba4-4.jpg" alt="izba č.4"  style="width: 100%"/>
+                            <img src="img/izba4/izba4-4.webp" alt="izba č.4"  style="width: 100%"/>
                         </div>
                         <div  class="column" >
-                            <img src="img/izba4/izba4-3.jpg" alt="izba č.4" style="width:100%"/>
+                            <img src="img/izba4/izba4-3.webp" alt="izba č.4" style="width:100%"/>
                         </div>
                         <div  class="column">
-                            <img src="img/izba4/izba4-5.jpg" alt="izba č.4" style="width:100%"/>
+                            <img src="img/izba4/izba4-5.webp" alt="izba č.4" style="width:100%"/>
                         </div>
                     </div>
                 </div>
